<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_android_wear_update_text">This app won\'t run unless you update the Android Wear app.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="hello">Hello World, GsMultiscreenActivity!</string>
    <string name="app_name">G-MScreen</string>
    <string name="app_name_1">MScreen</string>
    <string name="app_name_ross">AZ-MScreen</string>
    <string name="CaptionServerIP">Server IP</string>
    <string name="CaptionConnect">Connect</string>
    <string name="CaptionClear">Clear</string>
    <string name="Logining">Logining…</string>
    <string name="ConnectUnkonwnError">unkonwn connect error…</string>
    <string name="ServerNotResponse">the STB server is not response…</string>
    <string name="NetworkNotReachable">the network is not reachable…</string>
    <string name="IpNotVaild">the IP is not valid…</string>
    <string name="IpError">the IP you input is error…</string>
    <string name="str_sw_version_error">Maybe the STB SW version is too old!</string>
    <string name="str_stb_is_full">The STB server is connected fully!</string>
    <string name="Blank" />
    <string name="app_Test">test</string>
    <string name="port">Port</string>
    <string name="set">Setting</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="favor">Favor Mark</string>
    <string name="lock">Lock</string>
    <string name="str_lcn">LCN</string>
    <string name="str_chs">CHS</string>
    <string name="str_alphabet">Alphabet</string>
    <string name="str_transponder">Transponder</string>
    <string name="str_ftatocas">FTAToCAS</string>
    <string name="str_default">Default</string>
    <string name="str_favor">Favor</string>
    <string name="str_ftatocas_and_alphabet">FTAToCAS+Alphabet</string>
    <string name="str_provider">Provider</string>
    <string name="str_service_id">Service ID</string>
    <string name="str_language">Language</string>
    <string name="str_fta">FTA</string>
    <string name="str_satellite">Satellite</string>
    <string name="str_program_id">ProgramId</string>
    <string name="str_program_name">ProgramName</string>
    <string name="str_program_index">ProgramIndex</string>
    <string name="str_sat_name">SatName</string>
    <string name="str_program_type">ProgramType</string>
    <string name="str_fav_mark">FavMark</string>
    <string name="str_fav_news">News</string>
    <string name="str_fav_movies">Movies</string>
    <string name="str_fav_music">Music</string>
    <string name="str_fav_sports">Sports</string>
    <string name="str_fav_education">Education</string>
    <string name="str_fav_weather">Weather</string>
    <string name="str_fav_children">Children</string>
    <string name="str_fav_culture">Culture</string>
    <string name="str_program">Program</string>
    <string name="str_remote">Remote</string>
    <string name="str_debug">Debug</string>
    <string name="str_event_timer">Event Timer</string>
    <string name="str_sleep_timer">Sleep Timer</string>
    <string name="str_main_page">Main Page</string>
    <string name="str_parental_ctrl">Parental Control</string>
    <string name="str_software_update">Software Update</string>
    <string name="str_stb_debug">STB Debug</string>
    <string name="str_simple_remote">Simple Remote</string>
    <string name="str_parent_ctrl">Parent Control</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_screen_lock">Screen Lock</string>
    <string name="str_power_off">Power Off</string>
    <string name="str_factory_default">Set Factory default</string>
    <string name="str_all">All</string>
    <string name="str_channels_only">Channels Only</string>
    <string name="str_radio_channels_only">Radio Channel Only</string>
    <string name="str_scramble_channels_only">Scramble Channel Only</string>
    <string name="str_reset_all">Reset All</string>
    <string name="str_reset_all_chs">Reset All Channels</string>
    <string name="str_reset_all_radio_chs">Reset All Radio Channels</string>
    <string name="str_reset_all_scramble_chs">Reset All Scramble Channels</string>
    <string name="str_play_mode">Play Mode</string>
    <string name="str_enable_debug">Enable Debug</string>
    <string name="str_email">Email</string>
    <string name="str_data">Data</string>
    <string name="event_edit">Event Edit</string>
    <string name="event_delete">Event Delete</string>
    <string name="event_channel">Channel</string>
    <string name="event_date">Date</string>
    <string name="event_start">Start</string>
    <string name="event_stop">Stop</string>
    <string name="event_repeat">Repeat</string>
    <string name="event_standby">Standby</string>
    <string name="event_record">Record</string>
    <string name="event_confirm">Confirm</string>
    <string name="send_email_title">Send Email</string>
    <string name="send_email_message">Are you sure to send email?</string>
    <string name="send_email_fail">Email was not sent.</string>
    <string name="send_email_success">Email was sent successfully.</string>
    <string name="send_email_error">There was a problem sending the email.</string>
    <string name="yes_str">YES</string>
    <string name="no_str">NO</string>
    <string name="save_str">Save</string>
    <string name="cancel_str">Cancel</string>
    <string name="select_str">Select</string>
    <string name="process_text_download">Download</string>
    <string name="process_text_compress">Compress</string>
    <string name="progress_dialog_title">Processing</string>
    <string name="progress_dialog_message">Sending email, please wait…</string>
    <string name="debug_activity_title">Debug</string>
    <string name="send_flash_data">Send Flash Data</string>
    <string name="send_user_data">Send User Data</string>
    <string name="send_channel_data">Send Channel Data</string>
    <string name="send_rs232_output">Send RS232 Output</string>
    <string name="send_stb_screenshots">Send STB ScreenShots</string>
    <string name="sys_setting_title">Settings</string>
    <string name="loading_data">Loading data…</string>
    <string name="control_option_change_password">Change Password</string>
    <string name="change_psw_old_psw">Old Password :</string>
    <string name="change_psw_new_psw">New Password :</string>
    <string name="change_psw_verify_psw">Verify Password :</string>
    <string name="input_name_title">Input New Name</string>
    <string name="load_1_period">.</string>
    <string name="load_2_period">..</string>
    <string name="load_3_period">...</string>
    <string name="empty_record_files_tips">The video files which recorded in sat2ip will be displayed here.</string>
    <string name="str_show_window">Show Window</string>
    <string name="str_show_size">Show Size</string>
    <string name="str_show_position">Show Position</string>
    <string name="str_show_transparency">Show Transparency</string>
    <string name="str_large">Large</string>
    <string name="str_medium">Medium</string>
    <string name="str_small">Small</string>
    <string name="str_block">Block</string>
    <string name="gchat_left_top">Left-Top</string>
    <string name="gchat_left_bottom">Left-Bottom</string>
    <string name="gchat_right_top">Right-Top</string>
    <string name="gchat_right_bottom">Right-Bottom</string>
    <string name="gchat_copy">Copy</string>
</resources>