<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/gchat_popup_window"
    android:paddingLeft="@dimen/margin_little"
    android:paddingTop="@dimen/margin_small_little"
    android:paddingRight="@dimen/margin_little"
    android:paddingBottom="15dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/popup_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_little"
        android:text="@string/gchat_copy"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/popup_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/popup_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_little"
        android:text="@string/str_block"/>
</LinearLayout>
