<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <GridView
        android:scrollbarStyle="outsideInset"
        android:gravity="center"
        android:id="@android:id/list"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fadingEdge="none"
        android:nextFocusLeft="@android:id/list"
        android:nextFocusRight="@android:id/list"
        android:nextFocusUp="@+id/ml_menu_search"
        android:nextFocusDown="@android:id/list"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="auto_fit"
        android:fastScrollEnabled="true"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title_text_color"
            android:gravity="center"
            android:id="@+id/textview_nomedia"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_record_files_tips"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/layout_flipper_loading"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/middle_text_size"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_data"
                android:layout_weight="1"/>
            <ViewFlipper
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:flipInterval="1000"
                android:layout_weight="1"
                android:autoStart="true">
                <TextView
                    android:textSize="@dimen/middle_text_size"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="empty"/>
                <TextView
                    android:textSize="@dimen/middle_text_size"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_1_period"/>
                <TextView
                    android:textSize="@dimen/middle_text_size"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_2_period"/>
                <TextView
                    android:textSize="@dimen/middle_text_size"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_3_period"/>
            </ViewFlipper>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
