<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/gchat_setting_view"
    android:background="@color/gchat_background"
    android:paddingBottom="@dimen/space_of_to_mobile_side_size"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/gchat_title"
        android:background="@drawable/disp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/back_btn"
            android:background="@drawable/return_button_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/title_text_color"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sys_setting_title"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/gchat_username"
        android:background="@drawable/gchat_background"
        android:padding="@dimen/space_of_to_mobile_side_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="@dimen/margin_small_little"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"
            android:id="@+id/gchat_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_of_to_mobile_side_size"
            android:text="My name:"/>
        <TextView
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"
            android:ellipsize="end"
            android:id="@+id/my_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/gchat_username_title"/>
        <ImageView
            android:background="@drawable/gchat_rename_btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/gchat_show_window"
        android:background="@drawable/gchat_background"
        android:padding="@dimen/space_of_to_mobile_side_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="@dimen/margin_small_little"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_of_to_mobile_side_size"
            android:text="@string/str_show_window"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <mktvsmart.screen.view.Switch xmlns:gotech_view_xmlns="http://schemas.android.com/apk/res-auto"
            android:id="@+id/gchat_show_window_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            gotech_view_xmlns:thumb="@drawable/gchat_switch_off_thumb"
            gotech_view_xmlns:thumbUnable="@drawable/gchat_switch_on_thumb"
            gotech_view_xmlns:track="@drawable/gchat_switch_onoff_bg"
            gotech_view_xmlns:textOn="@string/Blank"
            gotech_view_xmlns:textOff="@string/Blank"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/gchat_show_size"
        android:background="@drawable/gchat_background"
        android:padding="@dimen/space_of_to_mobile_side_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="@dimen/margin_small_little"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_of_to_mobile_side_size"
            android:text="@string/str_show_size"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_size_large"
                android:background="@drawable/gchat_setting_show_size_large_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_large"
                android:layout_weight="1"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_size_medium"
                android:background="@drawable/gchat_setting_show_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_medium"
                android:layout_weight="1"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_size_small"
                android:background="@drawable/gchat_setting_show_size_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_small"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/gchat_show_position"
        android:background="@drawable/gchat_background"
        android:padding="@dimen/space_of_to_mobile_side_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="@dimen/margin_small_little"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_of_to_mobile_side_size"
            android:text="@string/str_show_position"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_position_top_left"
                android:background="@drawable/gchat_setting_show_position_top_left_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gchat_left_top"
                android:layout_weight="1"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_position_top_right"
                android:background="@drawable/gchat_setting_show_position_top_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gchat_right_top"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_position_bottom_left"
                android:background="@drawable/gchat_setting_show_position_bottom_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gchat_left_bottom"
                android:layout_weight="1"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/gchat_show_position_bottom_right"
                android:background="@drawable/gchat_setting_show_position_bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gchat_right_bottom"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/gchat_show_transparency"
        android:background="@drawable/gchat_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="@dimen/margin_small_little"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_of_to_mobile_side_size"
            android:text="@string/str_show_transparency"/>
        <SeekBar
            android:id="@+id/gchat_show_transparency_seekbar"
            android:paddingLeft="@dimen/space_of_to_mobile_side_size"
            android:paddingRight="@dimen/space_of_to_mobile_side_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_of_to_mobile_side_size"
            android:maxHeight="@dimen/gchat_seekbar_height"
            android:max="10"
            android:progressDrawable="@drawable/gchat_seekbar"
            android:minHeight="@dimen/gchat_seekbar_height"
            android:thumb="@drawable/gchat_seekbar_thumb"/>
    </LinearLayout>
</LinearLayout>
