<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/backgound2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:background="@drawable/disp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/title_text_color"
            android:id="@+id/sys_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_option_change_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/black"
            android:layout_width="@dimen/password_text_view_size"
            android:layout_height="wrap_content"
            android:text="@string/change_psw_old_psw"/>
        <EditText
            android:id="@+id/old_psw_edit"
            android:background="@drawable/edittext_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:password="true"
            android:maxLength="4"
            android:layout_weight="1"
            android:inputType="number">
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/black"
            android:layout_width="@dimen/password_text_view_size"
            android:layout_height="wrap_content"
            android:text="@string/change_psw_new_psw"/>
        <EditText
            android:id="@+id/new_psw_edit"
            android:background="@drawable/edittext_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:password="true"
            android:maxLength="4"
            android:layout_weight="1"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size">
        <TextView
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/black"
            android:layout_width="@dimen/password_text_view_size"
            android:layout_height="wrap_content"
            android:text="@string/change_psw_verify_psw"/>
        <EditText
            android:id="@+id/verify_psw_edit"
            android:background="@drawable/edittext_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:password="true"
            android:maxLength="4"
            android:layout_weight="1"
            android:inputType="number"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/demarcation_pass"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/change_psw_save_btn"
            android:background="@drawable/btn_click_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_str"
            android:layout_toLeftOf="@+id/demarcation_pass"
            android:layout_alignParentBottom="true"/>
        <Button
            android:id="@+id/change_psws_cancel_btn"
            android:background="@drawable/btn_click_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_str"
            android:layout_toRightOf="@+id/demarcation_pass"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
