<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:background="@drawable/disp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_name_title"/>
    </LinearLayout>
    <EditText
        android:id="@+id/input_name_edittext"
        android:background="@drawable/edittext_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_of_to_mobile_side_size"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/space_of_to_mobile_side_size"
        android:layout_marginBottom="30dp"
        android:maxLength="26"
        android:inputType="textNoSuggestions">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/input_name_confirm_btn"
            android:background="@drawable/btn_click_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_str"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/input_name_cancel_btn"
            android:background="@drawable/btn_click_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_str"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
